--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,10 @@ body{
     text-align: center;
 }
 
+.user-stats > div h2{
+    font-size: 18px;
+}
+
 footer{
     margin: .5em 0;
     font-family:'Kumbh Sans';
